refactor: 修改.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
-_site
-src/_posts/_draft
-src/_posts/_archive
+#_site
+#src/_posts/_draft
+#src/_posts/_archive
+#.vscode
 _archive
 node_modules
-.vscode
 *.log
 *.sh
-.DS_Store
-*/.DS_Store
-*/*/.DS_Store
 dist/
 .idea/
 package-lock.json
 src/.jekyll-cache/
-public/assets/main*
-public/assets/vendor*
+#public/assets/main*
+#public/assets/vendor*
 src/public/assets/main*
 src/public/assets/vendor*
+src/_drafts/*
+
+.jekyll-cache/*
+.DS_Store
+*/.DS_Store
+*/*/.DS_Store
