--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "jekyll-drafts": "cd build/ && jekyll serve -t -w -l -D --host 0.0.0.0 --port 4000",
     "jekyll-build": "cd build/ && jekyll serve -t -w -l --host 0.0.0.0 --port 4000",
-    "gh-draft-build": "grunt &&  npm run dev && npm run jekyll-drafts",
+    "gh-draft-build": "grunt &&  npm run prod && npm run jekyll-drafts",
     "gh-build-dev": "grunt && npm run dev && npm run jekyll-build",
     "gh-build-prod": "grunt && npm run prod && npm run jekyll-build",
     "dev": "cross-env NODE_ENV=development webpack --config build/webpack.dev.conf.js",
