--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "william-blog",
   "title": "Williiam Blog",
-  "author": "William <>",
+  "author": "William",
   "version": "1.8.2",
   "homepage": "",
   "repository": {
@@ -35,7 +35,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "gulp-yuicompressor": "0.0.3",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.0.0",
     "vue-loader": "^15.8.3",
@@ -60,7 +60,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "watch": "cross-env NODE_ENV=development webpack --watch"
   },
-  "description": "William Blog ========",
+  "description": "程式 筆記 ========",
   "main": "Gruntfil.js",
   "dependencies": {
     "vue": "^2.6.11"
