--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@babel/register": "^7.5.5",
     "babel-loader": "^8.0.6",
     "bootstrap-vue": "^2.3.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.13",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.2",
@@ -35,6 +35,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "gulp-yuicompressor": "0.0.3",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.0.0",
@@ -52,6 +53,7 @@
     "gh-draft-build": "grunt &&  npm run prod && npm run jekyll-drafts",
     "gh-build-dev": "grunt && npm run dev && npm run jekyll-build",
     "gh-build-prod": "grunt && npm run prod && npm run jekyll-build",
+    "gh-deploy-prod": "grunt && npm run prod && jekyll build",
     "dev": "cross-env NODE_ENV=development webpack --config build/webpack.dev.conf.js",
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.prod.conf.js",
     "grunt": "grunt watch",
