--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,15 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Setup Ruby, JRuby and TruffleRuby
+        uses: ruby/setup-ruby@v1.47.0
+        with:
+          ruby-version: 2.6.6 # Not needed with a .ruby-version file
+#          bundler-cache: true
+
+      - run:  bundle install
+#      - run:  bundle exec rake
+
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm install
