--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "webpack-merge": "^4.2.2"
   },
   "scripts": {
-    "jekyll-drafts": "cd build/ && jekyll serve -t -w -l -D --host 0.0.0.0 --port 4000",
-    "jekyll-build": "cd build/ && jekyll serve -t -w -l --host 0.0.0.0 --port 4000",
-    "gh-draft-build": "grunt &&  npm run prod && npm run jekyll-drafts",
-    "gh-build-dev": "grunt && npm run dev && npm run jekyll-build",
-    "gh-build-prod": "grunt && npm run prod && npm run jekyll-build",
-    "gh-deploy-prod": "grunt && npm run prod && jekyll build",
+    "jekyll-build": "cd build/ && jekyll build --trace",
+    "jekyll-serve": "cd build/ && jekyll serve -t -w -l --host 0.0.0.0 --port 4000",
+    "jekyll-serve-drafts": "cd build/ && jekyll serve -t -w -l -D --host 0.0.0.0 --port 4000",
+    "gh-draft-build": "grunt &&  npm run prod && npm run jekyll-serve-drafts",
+    "gh-build-dev": "grunt && npm run dev && npm run jekyll-serve-drafts",
+    "gh-build-prod": "grunt && npm run prod && npm run jekyll-serve",
+    "gh-deploy-prod": "grunt && npm run prod && npm run jekyll-build",
     "dev": "cross-env NODE_ENV=development webpack --config build/webpack.dev.conf.js",
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.prod.conf.js",
     "grunt": "grunt watch",
