[Update] Add actions/cache@v2 for deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           persist-credentials: false
 
+      - uses: actions/cache@v2
+
       - name: Setup Ruby, JRuby and TruffleRuby
         uses: ruby/setup-ruby@v1.47.0
         with:
